--- a/app/src/main/res/layout/fragment_titulo_cad.xml
+++ b/app/src/main/res/layout/fragment_titulo_cad.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btCadCPF"
+                android:id="@+id/btCad_Tit"
                 android:layout_width="157dp"
                 android:layout_height="36dp"
                 android:layout_marginTop="24dp"
