--- a/app/src/main/res/layout/fragment_cnh_cad.xml
+++ b/app/src/main/res/layout/fragment_cnh_cad.xml
@@ -267,7 +267,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btCad_CNH"
                 android:layout_width="157dp"
                 android:layout_height="36dp"
                 android:layout_marginTop="24dp"
