--- a/app/src/main/res/layout/fragment_reservista_cad.xml
+++ b/app/src/main/res/layout/fragment_reservista_cad.xml
@@ -141,7 +141,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btCadCPF"
+                android:id="@+id/btCad_Res"
                 android:layout_width="157dp"
                 android:layout_height="36dp"
                 android:layout_marginTop="24dp"
