--- a/app/src/main/res/layout/fragment_rg_cad.xml
+++ b/app/src/main/res/layout/fragment_rg_cad.xml
@@ -181,7 +181,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btCadRG"
+                android:id="@+id/btCad_RG"
                 android:layout_width="157dp"
                 android:layout_height="36dp"
                 android:layout_marginTop="24dp"
