--- a/app/src/main/res/layout/fragment_certidao_cad.xml
+++ b/app/src/main/res/layout/fragment_certidao_cad.xml
@@ -82,22 +82,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
             <com.vicmikhailau.maskededittext.MaskedEditText
-                android:id="@+id/etNumCPF_Cert"
-                android:layout_width="315dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:ems="10"
-                android:hint="Número do CPF"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etNome_Cert"
-                app:mask="###.###.###-##" />
-
-            <com.vicmikhailau.maskededittext.MaskedEditText
                 android:id="@+id/etDN_Cert"
                 android:layout_width="173dp"
                 android:layout_height="wrap_content"
@@ -143,7 +127,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etNumCPF_Cert"
+                app:layout_constraintTop_toBottomOf="@+id/etNome_Cert"
                 app:mask="###### ## ## #### # ##### ### ####### ##" />
 
             <EditText
@@ -424,13 +408,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:text="TextView"
+                android:text="e"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etFiliaMae_Cert"
-                tools:text="e" />
+                app:layout_constraintTop_toBottomOf="@+id/etFiliaMae_Cert" />
 
             <EditText
                 android:id="@+id/etNomMatGem_Cert"
